Sticky header dataGridStickyOverflow fix

--- a/web-client/src/main/webapp/static/css/gwt/form/components/table/table-sticky.css
+++ b/web-client/src/main/webapp/static/css/gwt/form/components/table/table-sticky.css
@@ -52,6 +52,8 @@
     z-index: 1001;
 }
 
-.dataGridStickyOverflow {
+.dataGridStickyCell.dataGridStickyOverflow,
+.dataGridStickyHeader.dataGridStickyOverflow,
+.dataGridStickyFooter.dataGridStickyOverflow {
     z-index: 0;
 }
